# ai_medvak

./: .gitignore
agents/data/: agent-map.json
medvak-agent-suite/: README.md
medvak-agent-suite/agent/: Dockerfile  app.py  config.py  pyproject.toml  router.py
medvak-agent-suite/agent/agent_map/: agent-map.json
medvak-agent-suite/agent/tools/: ingest_csv.py  link_req.py  nocodb_client.py  normalize.py  preview.py  schema.py  scrape_hh.py  scrape_zp.py  write.py
medvak-agent-suite/bot/: Dockerfile  api.py  handlers.py  keyboards.py  main.py  parser_csv.py  pyproject.toml
medvak-agent-suite/ops/: docker-compose.yml  healthcheck.sh
medvak-agent-suite/shared/: aliases.yml  logging.conf
medvak-agent-suite/tests/: test_normalize.py  test_preview.py
repo/: .env.example
