[project]
name = "medvak-agent"
version = "0.1.0"
description = "ASGI-сервис с endpoint'ами PREVIEW/WRITE/SCRAPE для работы с вакансиями и NocoDB"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=1.10,<2.0",      # v1 для совместимости с @validator (в tools/schema.py)
  "python-dotenv>=1.0,<2.0",
  "openai>=1.40.0",           # на будущее (Agents SDK / клиент)
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
